--- a/tellor_all_languages/package.json
+++ b/tellor_all_languages/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
+    "request": "^2.88.2",
     "rimraf": "^3.0.2",
     "urllib": "^2.36.1",
     "usingtellor": "^3.0.2"
